force-app/main/default/objects/Audit__c/fields/Actual_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Audit_Date__c</fullName>
    <description>Date the audit was performed</description>
    <inlineHelpText>Date the audit was performed</inlineHelpText>
    <label>Actual Audit Date</label>
    <type>Date</type>
</CustomField>