force-app/main/default/objects/Audit__c/fields/Audity_Type__c.field-meta.xml
<CustomField>
    <fullName>Audity_Type__c</fullName>
    <label>Audity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sale</fullName>
                <default>true</default>
                <label>Pre-Sale</label>
            </value>
            <value>
                <fullName>During-Sale</fullName>
            </value>
            <value>
                <fullName>Post-Sale</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>