force-app/main/default/objects/Audit__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Notes and observations</description>
    <inlineHelpText>Notes and observations</inlineHelpText>
    <label>Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>