force-app/main/default/objects/Audit__c/fields/Expected_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Audit_Date__c</fullName>
    <description>Planned date for the audit</description>
    <inlineHelpText>Planned date for the audit</inlineHelpText>
    <label>Expected Audit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>