force-app/main/default/objects/Audit__c/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original owner of the parent record</description>
    <inlineHelpText>Original owner of the parent record</inlineHelpText>
    <label>Original Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>