force-app/main/default/objects/Audit__c/fields/Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Lead (if Parent_Type__c = Lead)</description>
    <inlineHelpText>Reference to Lead (if Parent_Type__c = Lead)</inlineHelpText>
    <label>Parent Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>