force-app/main/default/objects/Audit__c/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Opportunity (if Parent_Type__c = Opportunity)</description>
    <inlineHelpText>Reference to Opportunity (if Parent_Type__c = Opportunity)</inlineHelpText>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>