force-app/main/default/objects/Audit__c/recordTypes/Lead_Audit.recordType-meta.xml
<RecordType>
    <fullName>Lead_Audit</fullName>
    <active>true</active>
    <label>Lead Audit</label>
</RecordType>