force-app/main/default/objects/Audit__c/recordTypes/Opportunity_Audit.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Audit</fullName>
    <active>true</active>
    <label>Opportunity Audit</label>
</RecordType>