force-app/main/default/objects/Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expected_Audit_Date__c</columns>
    <columns>Audit_Status__c</columns>
    <columns>Audity_Type__c</columns>
    <columns>Parent_Type__c</columns>
    <columns>Overdue__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Parent_Lead__c</columns>
    <columns>Parent_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>